Kubernetes/nexus/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: jenkins
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8081'
spec:
  selector: 
    app: nexus-server
  type: NodePort  
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32000

---

apiVersion: v1
kind: Service
metadata:
  name: nexus-repo
  namespace: jenkins
spec:
  type: NodePort
  ports:
    - port: 8085
      targetPort: 8085
      nodePort: 30085
  selector:
    app: nexus-server
