Kubernetes/nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
  - host: "nexus.maxsurm.me"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nexus-service
            port:
              number: 8081
